Increase connect timeout, and add additional details when catching an exception on fetchViaHttp